--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "gsap": "^3.10.4",
     "interweave": "^13.0.0",
     "react": "^18.1.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
