--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^6.5.1",
     "gsap": "^3.10.4",
     "interweave": "^13.0.0",
     "react": "^18.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
