--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^6.5.1",
+   "framer-motion": "4.1.17",
     "gsap": "^3.10.4",
     "interweave": "^13.0.0",
     "react": "^18.1.0",
